--- a/res/values/keys.xml
+++ b/res/values/keys.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="default_host">http://fasterpast.ru:8093</string>
-    <string name="default_password">password</string>
+    <string name="default_host"/>
+    <string name="default_password"/>
 </resources>
