--- a/res/values/theme.xml
+++ b/res/values/theme.xml
@@ -3,7 +3,7 @@
     <color name="primary">#009688</color>
     <color name="primary_dark">#00796B</color>
     <color name="primary_light">#B2DFDB</color>
-    <color name="accent">#8BC34A</color>
+    <color name="accent">#78909C</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#727272</color>
     <color name="icons">#FFFFFF</color>
@@ -25,7 +25,7 @@
     <style name="Toolbar.Theme" parent="Widget.AppCompat.Toolbar">
         <item name="theme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
         <item name="popupTheme">@style/ThemeOverlay.AppCompat.Light</item>
-        <item name="android:minHeight">?attr/actionBarSize</item>
+        <!--item name="android:minHeight">?attr/actionBarSize</item-->
         <item name="android:background">?attr/colorPrimary</item>
     </style>
 
