--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -38,7 +38,7 @@
                     <ListView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:id="@+id/switchers_list_view"
+                            android:id="@+id/ports_list_view"
                             android:choiceMode="none"
                             android:longClickable="true"/>
                 </android.support.v4.widget.SwipeRefreshLayout>
@@ -52,7 +52,7 @@
                 <ListView
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
-                        android:id="@+id/accounts_list_view"
+                        android:id="@+id/monsters_list_view"
                         android:layout_gravity="center"
                         android:focusable="true"
                         android:focusableInTouchMode="true"
