--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <EditTextPreference
-            android:key="monster_url"
-            android:summary="@string/setup_monster_url"
-            android:title="@string/monster_url"
-            android:defaultValue="@string/default_host">
-    </EditTextPreference>
+        android:defaultValue="@string/default_host"
+        android:key="monster_url"
+        android:summary="@string/setup_monster_url"
+        android:title="@string/monster_url" />
     <EditTextPreference
-            android:key="monster_password"
-            android:summary="@string/setup_monster_password"
-            android:title="@string/monster_password"
-            android:defaultValue="@string/default_password">
-    </EditTextPreference>
+        android:defaultValue="@string/default_password"
+        android:key="monster_password"
+        android:summary="@string/setup_monster_password"
+        android:title="@string/monster_password" />
 </PreferenceScreen>
